# src/main/resources/swagger.yaml
@@ -136,6 +136,32 @@ paths:
         '405':
           description: Invalid input
   /users/{id}:
+    get:
+      tags:
+        - users
+      summary: Retrieve all the information about user
+      operationId: getUserById
+      parameters:
+        - name: sso_token
+          in: header
+          description: ''
+          required: true
+          schema:
+            type: string
+        - name: id
+          in: path
+          description: ID of user
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
     patch:
       tags:
         - users
@@ -569,6 +595,25 @@ paths:
           description: Invalid token
 components:
   schemas:
+    User:
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+        name:
+          type: string
+        picture:
+          type: string
+        birthdate:
+          type: string
+          format: date
+        phone:
+          type: string
+        email:
+          type: string
+        type:
+          $ref: "#/components/schemas/UserTypeEnum"
     HomePage:
       type: object
       properties:
